--- a/HackRPI2014/Arty the Arduino/Readme
+++ b/HackRPI2014/Arty the Arduino/Readme
@@ -1,2 +1,24 @@
-code goes here.
-Rohan is a big bitch.
+Code goes here.
+Rohan and Matt are huge nerds.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+Why am I so cool?
